# Multi-Agent-Generator

./: .gitignore  CNAME  README.md  __main__.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
docs/: examples.md  index.md  installation.md  usage.md
docs/frameworks/: crewai-flow.md  crewai.md  langgraph.md  react-lcel.md  react.md
multi_agent_generator/: __init__.py  __main__.py  generator.py  model_inference.py
multi_agent_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
multi_agent_generator/frameworks/: __init__.py  crewai_flow_generator.py  crewai_generator.py  langgraph_generator.py  react_generator.py
scripts/litellm_inference/: custom_script.py  multimodel_inference.py
streamlit_app/: app.py
