[project]
name = "multi-agent-generator"
version = "0.1.0"
description = "Generate multi-agent AI teams using CrewAI, LangGraph, and ReAct"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "streamlit",
    "crewai",
    "langchain",
    "langgraph",
    "ibm-watsonx-ai",
    "python-dotenv",
    "pydantic",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
