[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-generator"
version = "0.2.0"
description = "Generate multi-agent AI teams using CrewAI, LangGraph, and ReAct with multiple LLM providers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Aakriti Aggarwal", email = "aakritiaggarwal2k@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "streamlit>=1.22.0",
    "crewai>=0.28.0",
    "openai>=1.3.0",
    "langchain>=0.0.271",
    "langgraph>=0.0.16",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
watsonx = ["ibm-watsonx-ai>=0.2.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[project.urls]
"Homepage" = "https://github.com/aakriti1318/multi-agent-generator"
"Bug Tracker" = "https://github.com/aakriti1318/multi-agent-generator/issues"

[project.scripts]
multi-agent-generator = "multi_agent_generator.__main__:main"

[tool.setuptools.packages.find]
include = ["multi_agent_generator*"]